# Gen-AI

Langchain-learning/: .env_sample  pyproject.toml  requirements.txt
Langchain-learning/Practice/: 1-Introduction.ipynb  2-model_integration.ipynb  3-tools.ipynb  5-structured_output.ipynb  6-middleware.ipynb
Langgraph-learning/: .env_sample  chatBot.ipynb
