[project]
name = "Langchain-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "ipykernel>=6.31.0",
    "jupyter>=1.1.1",
    "langchain>=0.1.0",
    "langchain-community>=0.0.20",
    "langchain-google-genai>=1.0.1",
    "langchain-groq>=0.0.1",
    "langchain-openai>=0.0.6",
    "langchain-tavily>=0.2.11",
    "python-dotenv>=1.2.1",
]
